tdf#165478 revert ConsiderWrapOnObjPos: always affect anchoring cell

This reverts my 6.0 commit e56f61c4637c09afbf125fa02f131b0c49e36351
for tdf#37153
which was likely fixed properly by some layoutInCell fixes for 25.2.

make CppunitTest_sw_ooxmlexport24 CPPUNIT_TEST_NAME=testTdf37153

make CppunitTest_sw_ooxmlexport25 CPPUNIT_TEST_NAME=testTdf165478_bottomAligned

Change-Id: I0413504228d25aa311318c37478261e17346e3db
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185634
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit c7f049069c5022ee09d73841d9e32b685a3bd9d8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185956
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>